# cvops-inference

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  README.md  build.ninja
include/: c_api.h  cvops_inference.h  hungarian.h  image_utils.h  inference_manager_base.h  inference_manager_factory.h  inference_manager_interface.h  inference_request.h  inference_result.h  inference_session_request.h  kalman_filter.h  metadata_parser.h  model_platforms.h  tracking.h  yolo_inference_manager.h
lib/: c_api.cpp  cvops_inference.cpp  hungarian.cpp  image_utils.cpp  inference_manager_base.cpp  inference_manager_factory.cpp  inference_request.cpp  inference_result.cpp  kalman_filter.cpp  metadata_parser.cpp  tracking.cpp  yolo_inference_manager.cpp
src/: main.cpp
tests/: CmakeLists.txt
